fix: align cards to center

--- a/src/components/pages/Collection.css
+++ b/src/components/pages/Collection.css
@@ -22,6 +22,7 @@
   flex-wrap: wrap;
   padding: 10px 15px;
   width: calc(95% - 30px * 2);
+  justify-content: center;
   border-radius: 12px 12px 12px 12px;
 }
 .collection-cards-light {
